--- a/pkl.ini
+++ b/pkl.ini
@@ -3,10 +3,10 @@
 ; The layout ini file is "layouts/[key value]/layout.ini"
 ; You can use multiple layouts, if you write:
 ; 	layout = layout1:Displayed name,layout2
-layout = prolemak_hu:Hungarian Prolemak,prolemak_en:English Prolemak
+layout = colemak
 
 ; With this hotkey you can switch between layouts
-changeLayoutHotkey = LAlt & LShift
+changeLayoutHotkey = 
 
 ; If your original layout has deadkeys (like '^', etc), put them 
 ; here; (For example on the Hungarian keyboard '^' is a dead key, 
@@ -65,55 +65,3 @@ altGrEqualsAltCtrl = no
 ; minutes, even you type or pressing keys.
 suspendTimeOut = 0
 exitTimeOut = 0
-
-; If it is yes/true/1, pkl will go suspend when it starts.
-; (Yes, I know the helper image is appearing and hiding.)
-; I think the better way is start PKL when you need it.
-startsInSuspendMode = no
-
-[extend]
-; With hold down the 'extend_key'
-SC002 = 
-SC003 = 
-SC004 = 
-SC005 = 
-SC006 = 
-SC007 = 
-SC008 = 
-SC009 = 
-SC00a = 
-SC00b = 
-SC00c = 
-SC00d = 
-
-SC011 = Esc
-SC015 = PgUp
-SC016 = Home
-SC017 = Up
-SC018 = End
-SC019 = Ins
-SC01a = Esc
-
-SC01e = Win
-SC01f = Alt
-SC020 = Ctrl
-SC021 = Shift
-SC022 = 
-SC023 = PgDn
-SC024 = Left
-SC025 = Down
-SC026 = Right
-SC027 = Del
-
-SC02d = Cut
-SC02e = Copy
-SC02f = Paste
-SC030 = Enter
-SC031 = BackSpace
-SC032 = WheelLeft
-SC033 = WheelUp
-SC034 = WheelDown
-SC035 = WheelRight
-
-SC039 = *^{Space}
-
